--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
         <section id="smartphone">
-
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
         <section id="socialmedia">
 
