--- a/index.html
+++ b/index.html
@@ -4,17 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Social Media Project</title>
   </head>
   <body>
     <main>
-        <section id="smartphone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
-        </section>
-        <section id="socialmedia">
-    
-        </section>
+      <section id="smartphone">
+        <iframe src="home.html" name="tela" id="tela" frameborder="0"
+          >Seu navegador não é compatível com isso.</iframe
+        >
+      </section>
+      <section id="socialmedia">
+        <a href="#" target="tela"
+          ><img src="imagens/logo-home.jpg" alt="Home" /></a
+        ><br />
+        <a href="#" target="tela"
+          ><img src="imagens/logo-youtube.jpg" alt="Youtube" /></a
+        ><br />
+        <a href="#" target="tela"
+          ><img src="imagens/logo-github.jpg" alt="GitHub" /></a
+        ><br />
+        <a href="#" target="tela"
+          ><img src="imagens/logo-instagram.jpg" alt="Instagram" /></a
+        ><br />
+        <a href="#" target="tela"
+          ><img src="imagens/logo-twitter.jpg" alt="Twitter" /></a
+        ><br />
+        <a href="#" target="tela"
+          ><img src="imagens/logo-facebook.jpg" alt="Facebook"
+        /></a>
+      </section>
     </main>
   </body>
 </html>
