--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
         >
       </section>
       <section id="socialmedia">
-        <a href="#" target="tela"
+        <a href="home.html" target="tela"
           ><img src="imagens/logo-home.jpg" alt="Home" /></a
         ><br />
-        <a href="#" target="tela"
+        <a href="youtube.html" target="tela"
           ><img src="imagens/logo-youtube.jpg" alt="Youtube" /></a
         ><br />
-        <a href="#" target="tela"
+        <a href="github.html" target="tela"
           ><img src="imagens/logo-github.jpg" alt="GitHub" /></a
         ><br />
-        <a href="#" target="tela"
+        <a href="instagram.html" target="tela"
           ><img src="imagens/logo-instagram.jpg" alt="Instagram" /></a
         ><br />
-        <a href="#" target="tela"
+        <a href="twitter.html" target="tela"
           ><img src="imagens/logo-twitter.jpg" alt="Twitter" /></a
         ><br />
-        <a href="#" target="tela"
+        <a href="facebook.html" target="tela"
           ><img src="imagens/logo-facebook.jpg" alt="Facebook"
         /></a>
       </section>
